tests/test2/klee-out-0/test000020.kquery
array re[7] : w32 -> w8 = symbolic
(query [(Eq 94 (Read w8 0 re))
         (Eq false
             (Eq 0 (Read w8 1 re)))
         (Eq 42 (Read w8 2 re))
         (Eq false
             (Eq 0 (Read w8 3 re)))
         (Eq 42 (Read w8 4 re))
         (Eq false
             (Eq 0 (Read w8 5 re)))
         (Eq 42 (Read w8 6 re))]
        false)
